--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" type= "text/css" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/main.js">
 </head>
 
 <body>
@@ -178,7 +177,7 @@
     <footer>
         <p>Copyright 2025 - Amina Saidi</p>
     </footer>
-
+<script type="module" src = "src/main.js"></script>
 </body>
 
 </html>
