'Back to top' button toegevoegd

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
+    <p id="backtotop"></p>
     <header>
         <nav id="navigatie">
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
             <ul>
-                <li><U>MENU</U></li>
+                <li>MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
                 <li id="language">EN</li>
@@ -158,12 +159,9 @@
         </div>
 
     </div>
-    
 
     <div class="FAVORIETEN" id="favorieten">
         <h1>FAVORIETEN</h1>
-
-        <p>Hier vinden jullie jullie favoriete Pokemons!</p>
     </div>
 
     <br>
@@ -173,6 +171,8 @@
     <!--Foto misschien verplaatsen naar naast search bar-->
     <img src="images/pokemonthree.png" alt="" width="400px" id="pokemon-all">
     <br>
+
+    <a href="#backtotop">Back to top</a>
 
     <footer>
         <p>Copyright 2025 - Amina Saidi</p>
