'Back to top' button verbetert

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <p id="backtotop"></p>
+    
     <header>
-        <nav id="navigatie">
+        <nav id="navigatie" >
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
-            <ul>
+            <ul id="backtotop">
                 <li>MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
@@ -172,7 +172,7 @@
     <img src="images/pokemonthree.png" alt="" width="400px" id="pokemon-all">
     <br>
 
-    <a href="#backtotop">Back to top</a>
+    <a href="#backtotop" id="backtotop">Back to top</a>
 
     <footer>
         <p>Copyright 2025 - Amina Saidi</p>
