Link voor taal gemaakt

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -21,7 +21,7 @@
                 <li>MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
-                <li id="language">EN</li>
+                <li id="language"><a href="language">EN</a></li>
             </ul>
         </nav>
 
