link een taal gegeven

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -21,7 +21,7 @@
                 <li>MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
-                <li id="language"><a href="language">EN</a></li>
+                <li id="language"><a href="#" language='english'>EN</a></li>
             </ul>
         </nav>
 
@@ -162,6 +162,7 @@
 
     <div class="FAVORIETEN" id="favorieten">
         <h1>FAVORIETEN</h1>
+        <p>Er is momenteel nog niets te zien...</p>
     </div>
 
     <br><br><br><br><br><br><br><br><br><br><br><br>
