Afbeelding boven de footer geplaatst en juiste css geschreven

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -160,7 +160,7 @@
 
     </div>
 
-    <div class="FAVORIETEN" id="favorieten">
+    <div class="FAVORIETEN">
         <h1>FAVORIETEN</h1>
         <p>Er is momenteel nog niets te zien...</p>
     </div>
@@ -173,8 +173,8 @@
 
     <a href="#backtotop" id="backtotop">Back to top</a>
 
+    <div id="pokemon-all"><img src="images/pokemonthree.png" alt="" width="400px"></div>
     <footer>
-        <img src="images/pokemonthree.png" alt="" width="400px" id="pokemon-all">
         <p>Copyright 2025 - Amina Saidi</p>
     </footer>
 
