--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -170,10 +170,12 @@
     <!--Foto misschien verplaatsen naar naast search bar-->
 
     <br>
+    
 
-    <a href="#backtotop" id="backtotop">Back to top</a>
-
-    <div id="pokemon-all"><img src="images/pokemonthree.png" alt="" width="400px"></div>
+    <div id="pokemon-all">
+        <a href="#backtotop" id="backtotop">Back to top</a>
+        <img src="images/pokemonthree.png" alt="" width="400px">
+    </div>
     <footer>
         <p>Copyright 2025 - Amina Saidi</p>
     </footer>
