Back to top button verbeterd

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
+    <a id="top"></a>
 
     <header>
         <nav id="navigatie">
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
-            <ul id="backtotop">
+            <ul>
                 <li>MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
@@ -160,7 +161,7 @@
 
     </div>
 
-    <div class="FAVORIETEN">
+    <div class="FAVORIETEN" id="favorieten">
         <h1>FAVORIETEN</h1>
         <p>Er is momenteel nog niets te zien...</p>
     </div>
@@ -173,7 +174,7 @@
     
 
     <div id="pokemon-all">
-        <a href="#backtotop" id="backtotop">Back to top</a>
+        <a href="#top" id="backtotop">Back to top</a>
         <img src="images/pokemonthree.png" alt="" width="400px">
     </div>
     <footer>
