'copyright' symbool toegevoegd in de footer

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -166,20 +166,18 @@
         <p>Er is momenteel nog niets te zien...</p>
     </div>
 
-    <br><br><br><br>
-
-    <!--Foto misschien verplaatsen naar naast search bar-->
-
-    <br>
-    
+    <br><br><br><br>    
 
     <div id="pokemon-all">
-        <a href="#top" id="backtotop">Back to top</a>
         <img src="images/pokemonthree.png" alt="" width="400px">
     </div>
+
     <footer>
-        <p>Copyright 2025 - Amina Saidi</p>
+        <p>&copy; 2025 - Amina Saidi</p>
+        <p>All rights reserved</p>
     </footer>
+
+    <a href="#top" id="backtotop">Back to top</a>
 
     <script type="module" src="src/main.js"></script>
 
