Naam van de id verandert

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -19,7 +19,7 @@
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
             <ul>
-                <li>MENU</li>
+                <li >MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
                 <li id="language"><a href="#" language='english'>EN</a></li>
@@ -30,7 +30,7 @@
 
 
     <div id="intro">
-        <div id="peekingpokemon"><img src="images/peekingpokemon.png" alt="" width="200px" id="test"></div>
+        <div id="peekingpokemon"><img src="images/peekingpokemon.png" alt="" width="200px" id="peekingpokemon"></div>
 
         <div id="search-container">
             <img src="images/pokemongroup.jpg" alt="" width="500px" id="pokemongroup">
