Id gegeven aan menu en css bewerkt

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -19,7 +19,7 @@
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
             <ul>
-                <li >MENU</li>
+                <li id="menu">MENU</li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
                 <li id="language"><a href="#" language='english'>EN</a></li>
@@ -166,7 +166,7 @@
         <p>Er is momenteel nog niets te zien...</p>
     </div>
 
-    <br><br><br><br>    
+    <br><br><br><br>
 
     <div id="pokemon-all">
         <img src="images/pokemonthree.png" alt="" width="400px">
