Verborgen menu toegevoegd onder 'menu' in de navigatie

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -19,7 +19,13 @@
             <img src="images/pokemonlogo.png" alt="" width="150px" id="pokemon-logo">
 
             <ul>
-                <li id="menu">MENU</li>
+                <li id="menu">
+                    <a href="#">MENU</a>
+                    <ul class="sub-menu">
+                        <li class="li-submenu"><a href="#pokemons">POKEMONS</a><p class="menu-description">Zoek, filter en sorteer je favoriete Pokemons! Ontdek alles: hun namen, **** en nog veel meer!</p></li>
+                        <li><a href="#favorieten">FAVORIETEN</a><p class="menu-description">Gek op een Pokemon? Bewaar ze in je favorieten en raak ze nooit meer kwijt!</p></li>
+                    </ul>
+                </li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
                 <li id="language"><a href="#" language='english'>EN</a></li>
