Interactieve Pokémon-sectie toegevoegd met knop om info te wisselen

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -23,10 +23,16 @@
                     <a href="#">MENU</a>
 
                     <ul class="sub-menu">
-                        <li class="li-submenu"><a href="#pokemons">POKEMONS</a><p class="menu-description">Zoek, filter en sorteer je favoriete Pokemons! Ontdek alles: hun namen, **** en nog veel meer!</p></li>
-                        <li><a href="#favorieten">FAVORIETEN</a><p class="menu-description">Gek op een Pokemon? Bewaar ze in je favorieten en raak ze nooit meer kwijt!</p></li>
+                        <li class="li-submenu"><a href="#pokemons">POKEMONS</a>
+                            <p class="menu-description">Zoek, filter en sorteer je favoriete Pokemons! Ontdek alles: hun
+                                namen, **** en nog veel meer!</p>
+                        </li>
+                        <li><a href="#favorieten">FAVORIETEN</a>
+                            <p class="menu-description">Gek op een Pokemon? Bewaar ze in je favorieten en raak ze nooit
+                                meer kwijt!</p>
+                        </li>
                     </ul>
-                    
+
                 </li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
@@ -51,6 +57,19 @@
                 </form>
             </div>
             <h2 class="beschrijving">Zoek naar uw favoriete Pokemons en ontdek...!</h2>
+        </div>
+    </div>
+
+
+    <div id="pokemon-card">
+        <div class="left">
+            <h1 id="pokemon-name">Pikachu</h1>
+            <p id="pokemon-desc">Een elektrische muis Pokémon!</p>
+            <button id="next-btn">Ontdek de volgende Pokémon</button>
+        </div>
+
+        <div class="right">
+            <img id="pokemoncard-img" src="images/pikachu.png" alt="" width="400px">
         </div>
     </div>
 
