--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -65,7 +65,7 @@
         <div class="left">
             <h1 id="pokemon-name">Pikachu</h1>
             <p id="pokemon-desc">Een elektrische muis Pokémon!</p>
-            <button id="next-btn">Ontdek de volgende Pokémon</button>
+            <button id="next-btn">Ontdek de volgende Pokémon !</button>
         </div>
 
         <div class="right">
