--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
-                <li><a href="#" language='english' id="language">EN</a></li>
+                <li id="language"><a href="#" language='english'>EN</a></li>
             </ul>
 
         </nav>
