Js voor de favorieten verbeterd

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -188,6 +188,7 @@
     <div class="FAVORIETEN" id="favorieten">
         <h1>FAVORIETEN</h1>
         <p>Er is momenteel nog niets te zien...</p>
+        <div id="favorieten-lijst"></div>
     </div>
 
     <br><br><br><br>
