--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -51,8 +51,8 @@
             <!-- Div voor research met foto aan de rechterkant -->
             <div id="search">
                 <!-- foto van loep toevoegen -->
-                    <input type="text" name="zoekterm" maxlength="50" size="1">
-                    <button type="submit">Zoeken</button>
+                <input type="text" name="zoekterm" maxlength="50" size="1">
+                <button type="submit">Zoeken</button>
             </div>
             <h2 class="beschrijving">Zoek naar uw favoriete Pokemons en ontdek...!</h2>
         </div>
@@ -71,6 +71,25 @@
         </div>
     </div>
 
+    <section>
+        <h1>Overzicht van alle Pokemons</h1>
+        <table id="personages-tabel">
+            <thead>
+                <tr>
+                    <th>Naam</th>
+                    <th>Type</th>
+                    <th>Ability</th>
+                    <th>Hoogte</th>
+                    <th>Gewicht</th>
+                    <th>Aantal XP</th>
+                </tr>
+            </thead>
+
+            <tbody id="personages-section">
+                <!--Hier komt de code in Javascript-->
+            </tbody>
+        </table>
+    </section>
 
     <div class="pokemon-list" id="pokemons">
         <h1>POKEMONS</h1>
