--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -25,7 +25,7 @@
                     <ul class="sub-menu">
                         <li class="li-submenu"><a href="#pokemons">POKEMONS</a>
                             <p class="menu-description">Zoek, filter en sorteer je favoriete Pokemons! Ontdek alles: hun
-                                namen, **** en nog veel meer!</p>
+                                namen, type en nog veel meer!</p>
                         </li>
                         <li><a href="#favorieten">FAVORIETEN</a>
                             <p class="menu-description">Gek op een Pokemon? Bewaar ze in je favorieten en raak ze nooit
@@ -72,6 +72,8 @@
     </div>
 
     <section>
+
+        <button onclick="sortList()">Sorteren</button>
         <h1>Overzicht van alle Pokemons</h1>
         <table id="personages-tabel">
             <thead>
