Code geschreven voor het vertalen van elk element op de website, inclusief elementen in de tabel, menu,...

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li><a href="#pokemons">POKEMONS</a></li>
                 <li><a href="#favorieten">FAVORIETEN</a></li>
-                <li id="language"><a href="#" language='english'>EN</a></li>
+                <li id="language"><a href="#" id="taal-verandering" data-lang="nl">EN</a></li>
             </ul>
 
         </nav>
@@ -52,7 +52,7 @@
             <div id="search">
                 <!-- foto van loep toevoegen -->
                 <input type="text" name="zoekterm" maxlength="50" size="1">
-                <button type="submit">Zoeken</button>
+                <button type="submit" id="Zoeken">Zoeken</button>
             </div>
             <h2 class="beschrijving">Zoek naar uw favoriete Pokemons en ontdek...!</h2>
         </div>
