Formulier validatie verbeterd en vertaling ervan toegevoegd

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -51,7 +51,7 @@
             <!-- Div voor research met foto aan de rechterkant -->
             <div id="search">
                 <!-- foto van loep toevoegen -->
-                <input type="text" name="zoekterm" maxlength="50" size="1">
+                <input type="text" name="zoekterm" maxlength="50" size="1" required minlength="2">
                 <button type="submit" id="Zoeken">Zoeken</button>
             </div>
             <h2 class="beschrijving">Zoek naar uw favoriete Pokemons en ontdek...!</h2>
