Observer API toegevoegd

--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -127,7 +127,7 @@
     <div class="pokemon-list" id="pokemons">
         <h1>POKEMONS</h1>
 
-        <div class="list">
+        <div class="list fade-in">
             <div class="item-one">
                 <h2>Pikachu</h2>
                 <p>Info</p>
@@ -154,7 +154,7 @@
             </div>
         </div>
 
-        <div class="list">
+        <div class="list fade-in">
             <div class="item-one">
                 <h2>Pikachu</h2>
                 <p>Info</p>
@@ -181,7 +181,7 @@
             </div>
         </div>
 
-        <div class="list">
+        <div class="list fade-in">
             <div class="item-one">
                 <h2>Pikachu</h2>
                 <p>Info</p>
@@ -208,7 +208,7 @@
             </div>
         </div>
 
-        <div class="list">
+        <div class="list fade-in">
             <div class="item-one">
                 <h2>Pikachu</h2>
                 <p>Info</p>
