--- a/Mijn Project/index.html
+++ b/Mijn Project/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokémon Webite</title>
+    <title>Pokémon Website</title>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <!--Google fonts-->
